crates/ruff_python_formatter/tests/snapshots/format@sentinel.by.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/sentinel.by
---
## Input
```bython
sentinel MISSING

sentinel UNSET
```

## Output
```bython
sentinel MISSING

sentinel UNSET
```
