crates/ruff_python_formatter/tests/snapshots/format@statement_expression.by.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/statement_expression.by
---
## Input
```bython
def f(c: bool, x: int | str, xs: list[int], table: dict[str, int], k: str) -> object:
    a = if c:
        # keep this comment
        1
    else:
        2
    b = match x:
        case int():
            1
        case str():
            "s"
    d = for v in xs:
        if v:
            break v
    else:
        0
    e = table.get(k) ?? raise KeyError(k)
    g = x if c else raise ValueError(x)
    i = try:
        table[k]
    except KeyError:
        # a handler's suite is source too
        0
    j = try:
        n = table[k]
    except KeyError:
        0
    else:
        n + 1
    finally:
        print(k)
    return (a, b, d, e, g, i, j)


def h(c: bool) -> int:
    return if c:
        1
    else:
        2


# the loop escapes stand where a value is expected, like `raise` and `return`
def escapes(rows: list[int | None]) -> int:
    total = 0
    for row in rows:
        one = row ?? continue
        two = row ?? break
        three = row if row else break
        total += one + two + three
    return total
```

## Output
```bython
def f(c: bool, x: int | str, xs: list[int], table: dict[str, int], k: str) -> object:
    a = if c:
        # keep this comment
        1
    else:
        2
    b = match x:
        case int():
            1
        case str():
            "s"
    d = for v in xs:
        if v:
            break v
    else:
        0
    e = table.get(k) ?? raise KeyError(k)
    g = x if c else raise ValueError(x)
    i = try:
        table[k]
    except KeyError:
        # a handler's suite is source too
        0
    j = try:
        n = table[k]
    except KeyError:
        0
    else:
        n + 1
    finally:
        print(k)
    return (a, b, d, e, g, i, j)


def h(c: bool) -> int:
    return if c:
        1
    else:
        2


# the loop escapes stand where a value is expected, like `raise` and `return`
def escapes(rows: list[int | None]) -> int:
    total = 0
    for row in rows:
        one    = row ?? continue
        two    = row ?? break
        three  = row if row else break
        total += one + two + three
    return total
```
