crates/ruff_python_formatter/tests/snapshots/format@tab_width.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/tab_width.py
---
## Input
```python
# Fits with tab width 2
(1 + "	012345678901234567890123456789012345678901234567890123456789012345678901234567")

# Fits with tab width 4
(1 + "	0123456789012345678901234567890123456789012345678901234567890123456789012345")

# Fits with tab width 8
(1 + "	012345678901234567890123456789012345678901234567890123456789012345678901")
```

## Outputs
### Output 1
```
indent-style               = space
line-width                 = 88
indent-width               = 2
quote-style                = Double
line-ending                = LineFeed
magic-trailing-comma       = Respect
assignment-alignment       = disabled
docstring-code             = Disabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.10
source_type                = Python
nested-string-quote-style  = alternating
```

```python
# Fits with tab width 2
(1 + "	012345678901234567890123456789012345678901234567890123456789012345678901234567")

# Fits with tab width 4
(1 + "	0123456789012345678901234567890123456789012345678901234567890123456789012345")

# Fits with tab width 8
(1 + "	012345678901234567890123456789012345678901234567890123456789012345678901")
```


### Output 2
```
indent-style               = space
line-width                 = 88
indent-width               = 4
quote-style                = Double
line-ending                = LineFeed
magic-trailing-comma       = Respect
assignment-alignment       = disabled
docstring-code             = Disabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.10
source_type                = Python
nested-string-quote-style  = alternating
```

```python
# Fits with tab width 2
(
    1
    + "	012345678901234567890123456789012345678901234567890123456789012345678901234567"
)

# Fits with tab width 4
(1 + "	0123456789012345678901234567890123456789012345678901234567890123456789012345")

# Fits with tab width 8
(1 + "	012345678901234567890123456789012345678901234567890123456789012345678901")
```


### Output 3
```
indent-style               = space
line-width                 = 88
indent-width               = 8
quote-style                = Double
line-ending                = LineFeed
magic-trailing-comma       = Respect
assignment-alignment       = disabled
docstring-code             = Disabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.10
source_type                = Python
nested-string-quote-style  = alternating
```

```python
# Fits with tab width 2
(
        1
        + "	012345678901234567890123456789012345678901234567890123456789012345678901234567"
)

# Fits with tab width 4
(
        1
        + "	0123456789012345678901234567890123456789012345678901234567890123456789012345"
)

# Fits with tab width 8
(1 + "	012345678901234567890123456789012345678901234567890123456789012345678901")
```
