crates/ruff_python_formatter/tests/snapshots/format@top_star.by.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/top_star.by
---
## Input
```bython
a: list[*]

b: dict[*, *]

c: collections.abc.Mapping[*, *]

def f(x: list[*]) -> set[*]: ...

d: list[*] | int

e: tuple[*]

f: dict[str, *]

g: dict[*, int]

h: X[int, *, str]

def fn(data: dict[str, *]) -> dict[*, list[int]]: ...

i: list[int | *]

j: list[* | int]

k: list[int | * | str]

l: dict[str, int | *]

def fn2(a: list[int | *]) -> set[* | str]: ...
```

## Output
```bython
a: list[*]

b: dict[*, *]

c: collections.abc.Mapping[*, *]


def f(x: list[*]) -> set[*]: ...


d: list[*] | int

e: tuple[*]

f: dict[str, *]

g: dict[*, int]

h: X[int, *, str]


def fn(data: dict[str, *]) -> dict[*, list[int]]: ...


i: list[int | *]

j: list[* | int]

k: list[int | * | str]

l: dict[str, int | *]


def fn2(a: list[int | *]) -> set[* | str]: ...
```
