crates/ruff_python_formatter/tests/snapshots/format@trailing_lambda.by.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/trailing_lambda.by
---
## Input
```bython
def f(x: int = 1, a: (int) -> str):
    a(x)


f:
    print(it)  # prints 1

f(2):
    print(it)  # prints 2


x = 1
f( 2 ):
    y   =   it
    print(y)
x = 2


def outer():
    f:
        print(it)
    return None


# a block prints verbatim, so a comment inside it has to be carried by that range
f(2):  # end-of-line on the header
    # own-line inside the block
    print(it)
    # own-line at the end of the block


# a block standing as a statement's value prints verbatim too, and the
# assignment around it is normalised as usual
a = f(2):
    print(it)
b: int = f:
    print(it)
c    =    f( 2 ):  # end-of-line on the header
    # own-line inside the block
    print(it)


def wrapper():
    inner   = f:
        print(it)
    return inner


# a declaration takes a block as its value the same way an assignment does
let d = f(2):
    print(it)
let e: int = f:
    print(it)
var g    =    f( 2 ):  # end-of-line on the header
    print(it)
private h: int = f:
    print(it)


def declaring():
    let inner = f:
        print(it)
    return inner


# a `return` takes a block as its value too
def returning():
    return f(2):
        print(it)


def returning_bare():
    return    f:  # end-of-line on the header
        print(it)
```

## Output
```bython
def f(x: int = 1, a: (int) -> str):
    a(x)


f:
    print(it)  # prints 1

f(2):
    print(it)  # prints 2


x = 1
f( 2 ):
    y   =   it
    print(y)
x = 2


def outer():
    f:
        print(it)
    return None


# a block prints verbatim, so a comment inside it has to be carried by that range
f(2):  # end-of-line on the header
    # own-line inside the block
    print(it)
    # own-line at the end of the block


# a block standing as a statement's value prints verbatim too, and the
# assignment around it is normalised as usual
a      = f(2):
    print(it)
b: int = f:
    print(it)
c      = f( 2 ):  # end-of-line on the header
    # own-line inside the block
    print(it)


def wrapper():
    inner = f:
        print(it)
    return inner


# a declaration takes a block as its value the same way an assignment does
let d          = f(2):
    print(it)
let e: int     = f:
    print(it)
var g          = f( 2 ):  # end-of-line on the header
    print(it)
private h: int = f:
    print(it)


def declaring():
    let inner = f:
        print(it)
    return inner


# a `return` takes a block as its value too
def returning():
    return f(2):
        print(it)


def returning_bare():
    return f:  # end-of-line on the header
        print(it)
```
